Fixed some UI alignments for cleaner look

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,9 @@ h6 {
 #header .social-links {
   margin-top: 40px;
   display: flex;
+  margin-left: 40px;
+  justify-content: flex-start;
+  gap: 20px;
 }
 
 #header .social-links a {
@@ -111,6 +114,7 @@ h6 {
   color: #fff;
   line-height: 1;
   margin-right: 8px;
+  
   border-radius: 50%;
   width: 40px;
   height: 40px;
